green-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: green-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-web
  template:
    metadata:
      labels:
        app: green-web
    spec:
      containers:
      - name: green-web
        image: wipasp/green-web:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
